--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "langchain": "^0.0.170"
   },
   "devDependencies": {
+    "bun-types": "^1.0.7",
     "typescript": "^5.2.2"
   },
   "optionalDependencies": {
